--- a/configuration.properties
+++ b/configuration.properties
@@ -7,7 +7,7 @@ viewCartPageTitle=Automation Exercise - Checkout
 poloPageTitle=https://www.automationexercise.com/brand_products/Polo
 hmPageTitle=https://www.automationexercise.com/brand_products/H&M
 name=mehmet
-email=mehmet12@gmail.com
+email=fake12@gmail.com
 password=password
 lastName=yilmaz
 company=Fins
@@ -17,6 +17,6 @@ country=India
 state=USD
 city=Ankara
 zipcode=6000
-mobileNumber=07754789632
+mobileNumber=07750000000
 message=message
 subject=subject
